-changed marchmaller -added a mock that service as if its SOAP Service -changed SOAP config -changed SOAP URL -added license

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 # Configure SOAP endpoint URL
-soap.endpoint.url=http://localhost:8080/api/soap-endpoint
+soap.endpoint.url=http://localhost:8080/soap-services
+# Database h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.h2.console.enabled=true
 
